fixed text align issue in RandomCategory

--- a/src/assets/styles/_randomCategories.scss
+++ b/src/assets/styles/_randomCategories.scss
@@ -2,9 +2,10 @@
   display: flex;
   flex: 1;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   height: 100%;
   font-size: 40px;
+  text-align: center;
   // margin: 0 30px;
 }
 
